# DSA-supreme-3.0

./: .gitignore  1.rat in a maze  CMakeLists.txt  mainWithVectorIncludeTemplate.cpp
10.Linked List/1.lecture 1/: 1.linked list creation and insertion at head tail.cpp  2.searching in LL.cpp  3.deletion in LL.cpp
10.Linked List/2.lecture 2/: 1.doubly LL.cpp
10.Linked List/3.lecture 3/: 1.ELC reverse a LinkedList 206.cpp  2. ELC middle of Linked List 876 .cpp  3. ELC is linkedList Palindrome 234.cpp
10.Linked List/4.lecture 4/: 1. ELC is linkedlist having Cycle 146 V.V.V.IMP .cpp  2. ELC remove duplicates in sorted LL 83.cpp  3. EGFG sort 0s 1s 2s in LinkedList  IMP .cpp  4.MGFG add 1 to linkedList represented Number.cpp  5.MLC add two number in LL in reverse order 2 .cpp  6.MGFG add numbered Linked List IMP .cpp  7. HLC reverse nodes in K group in LL 25 .cpp  test.cpp
10.Linked List/5.Debugging exercises/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
101.CONTEST 1 IN OOPS WEEK/: 2.dominant pair.cpp  3.shy.cpp
3.Array week/: assignment.cpp
3.Array week/mega class/: lc_229_majorityElement2.cpp  majorityElement1.cpp
4.Searching and sorting/Assignment Ques/: 2.LC_658_kClosestElement.cpp  4.IMP_bookAllocationProblem.cpp  5.painterPartition.cpp  6.aggressiveCows.cpp  8.prataSpoj.cpp
5.Char Array And String/: charTemp.cpp
8.Backtracking & Dnc/: 1.quick sort.cpp
9.OOPs/: 1.how to make class.cpp  2.inheritance.cpp  4.runTimePolimorphism.cpp  5. QUIZ 30TH Ques.cpp
Array week/: array1.cpp  array2.cpp  array3.cpp  debugExercise.cpp  megaClass.cpp  vectorClass.cpp
(+174 files in other folders)
